# tentacode

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  makefile  run.sh  unit_test.tt  unit_test_func.tt  unit_test_raylib.tt  unit_test_struct.tt
examples/learnopengl.com/getting_started/01_Hello_Window/: hello_window.tt
examples/learnopengl.com/getting_started/02_Hello_Triangle/: hello_triangle.tt
examples/learnopengl.com/getting_started/03_Shaders/: shaders.fs  shaders.tt  shaders.vs
examples/learnopengl.com/getting_started/04_Textures/: textures.tt
examples/learnopengl.com/getting_started/05_Transformations/: transformations.fs  transformations.tt  transformations.vs
examples/learnopengl.com/getting_started/06_Coordinate_Systems/: coordinate_systems.fs  coordinate_systems.tt
examples/learnopengl.com/getting_started/07_Camera/: camera.tt  camera.vs
examples/learnopengl.com/includes/: math3d.tt
examples/learnopengl.com/tutorial-01-opening-a-window/: tutorial_01.tt
examples/learnopengl.com/tutorial-02-the-first-triangle/: tutorial_02.tt
examples/text-games/: guess.tt  rps.tt  tictactoe.tt
include/tentacode/: TentacodeVersion.hh.in
src/: Enums.h  Environment.cpp  Environment.h  ErrorHandler.h  Expressions.cpp  Expressions.h  Expressions_Call.cpp  Expressions_Call_File.cpp  Expressions_Call_Map.cpp  Expressions_Call_Math.cpp  Expressions_Call_Set.cpp  Expressions_Call_Str.cpp  Expressions_Call_Vec.cpp  Extensions.h  Extensions_Raylib.h  Interpreter.h  Literal.cpp  Literal.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Statements.cpp  Statements.h  TFunction.cpp  TFunction.h  TMap.h  TSet.h  TStruct.cpp  TStruct.h  TType.cpp  TType.h  TValue.cpp  TValue.h  TValue_BinaryOps.cpp  TValue_Cast.cpp  TValue_Construct.cpp  TVec.h  Token.h  Utility.h  (+3 more)
